form table key label: prevent overlap

--- a/src/scss/themes/ng/body.scss
+++ b/src/scss/themes/ng/body.scss
@@ -3680,6 +3680,7 @@ a[role="button"].cui-button-appearance-link {
 				word-wrap: break-word;
 				white-space: normal;
 				min-width: $td-min-width;
+				max-width: 100%;
 			}
 		}
 
